--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -8,6 +8,9 @@
   box-sizing: border-box;
   outline: none;
 }
+* ::selection {
+  background: #e3e5ff;
+}
 a {
   color: inherit;
   text-decoration: none;
@@ -24,21 +27,24 @@ html {
 }
 body {
   width: 100%;
-  height: 2000px;
+  min-width: 720px;
   margin: 0;
-  background: #edf9f0;
+  background: #f5f5f5;
   font-family: "PingFang SC", "Helvetica neue", Helvetica, Tahoma, "lantinghei sc", "Microsoft Yahei", sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 body::-webkit-scrollbar {
   width: 5px;
-  background: #d4d4d4;
+  height: 5px;
   border-radius: 2px;
 }
 body::-webkit-scrollbar-thumb {
-  width: 5px;
   background: #b2b2b2;
   border-radius: 5px;
+}
+body::-webkit-scrollbar-track {
+  background: #d4d4d4;
+  border-radius: 3px;
 }
 .header {
   width: 100%;
@@ -57,6 +63,10 @@ body::-webkit-scrollbar-thumb {
 .nav-bar .logo img {
   display: block;
   height: 100%;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 10px 1px #ececec;
+  -moz-box-shadow: 0 0 10px 1px #ececec;
+  box-shadow: 0 0 10px 1px #ececec;
 }
 .nav-bar .nav {
   float: right;
