--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -7,6 +7,9 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   outline: none;
+  ::selection{
+    background: #e3e5ff;
+  }
 }
 a{
   color:inherit;
@@ -21,20 +24,22 @@ html{
 }
 body{
   width:100%;
-  height:2000px;
+  min-width: 720px;
   margin:0;
-  background: #edf9f0;
+  background: #f5f5f5;
   font-family: "PingFang SC", "Helvetica neue", Helvetica, Tahoma, "lantinghei sc", "Microsoft Yahei", sans-serif;
   -webkit-font-smoothing: antialiased;;
   &::-webkit-scrollbar{
-    width:5px;
-    background: #d4d4d4;
+    width:5px;height:5px;
     border-radius: 2px;
   }
   &::-webkit-scrollbar-thumb{
-    width:5px;
     background: #b2b2b2;
     border-radius: 5px;
+  }
+  &::-webkit-scrollbar-track{
+    background: #d4d4d4;
+    border-radius: 3px;
   }
 }
 .header{
@@ -52,6 +57,10 @@ body{
     img{
       display: block;
       height:100%;
+      border-radius: 50%;
+      -webkit-box-shadow:0 0 10px 1px #ececec;
+      -moz-box-shadow:0 0 10px 1px #ececec;
+      box-shadow:0 0 10px 1px #ececec;
     }
   }
   .nav{
