--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -1,56 +1,16 @@
-*{
-  margin:0;
-  padding:0;
-  border:none;
-  background:none;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  outline: none;
-  ::selection{
-    background: #e3e5ff;
-  }
-}
-a{
-  color:inherit;
-  text-decoration: none;
-}
-ul,ol{ list-style: none;}
-html{
-  width:100%;
-  height:100%;
-  font-size: 16px;
-  color:#333;
-}
-body{
-  width:100%;
-  min-width: 720px;
-  margin:0;
-  background: #f5f5f5;
-  font-family: "PingFang SC", "Helvetica neue", Helvetica, Tahoma, "lantinghei sc", "Microsoft Yahei", sans-serif;
-  -webkit-font-smoothing: antialiased;;
-  &::-webkit-scrollbar{
-    width:5px;height:5px;
-    border-radius: 2px;
-  }
-  &::-webkit-scrollbar-thumb{
-    background: #b2b2b2;
-    border-radius: 5px;
-  }
-  &::-webkit-scrollbar-track{
-    background: #d4d4d4;
-    border-radius: 3px;
-  }
-}
+@navActive: #00cccc;
 .header{
   width:100%;
   background: #ffffff;
+  -webkit-box-shadow: 1px 0 15px 1px #d6d6d6;
+  -moz-box-shadow: 1px 0 15px 1px #d6d6d6;
+  box-shadow: 1px 0 15px 1px #d6d6d6;
 }
 .nav-bar{
   height:60px;
   padding-top: 10px;
   padding-bottom: 10px;
-  overflow: hidden;
+  position: relative;
   .logo{
     float: left;
     height:100%;
@@ -66,5 +26,90 @@ body{
   .nav{
     float:right;
     height:100%;
+    line-height: 40px;
+  }
+  .nav-item{
+    display: inline-block;
+    padding:0 8px;
+    margin:0 12px;
+    height:30px;
+    line-height: 30px;
+    color:#099;
+    font-weight: bold;
+    &.active{color:@navActive}
+    &:hover{color:@navActive;}
+  }
+  .login{
+    font-size: 20px;
+    padding-right: 0;
+    margin-right: 0;
+  }
+  .search{
+    float: right;
+    height:40px;
+    width:130px;
+    margin-right: 15px;
+    position: relative;
+    background: white;
+    /*-webkit-transition: all .4s;
+    -moz-transition: all .4s;
+    -ms-transition: all .4s;
+    -o-transition: all .4s;
+    transition: all .4s;*/
+    input{
+      padding:8px 15px;
+      font-size: 16px;
+      height:100%;
+      width:100%;
+      color: #00dada;
+      &::placeholder{
+        color: #dcdcdc;
+        font-size: 14px;
+      }
+    }
+    i{
+      position: absolute;
+      right:10px;top:10px;
+      font-size: 16px;
+      color:#dcdcdc;
+      font-weight:200;
+    }
+    &.active{
+      position: absolute;
+      width:50%;
+      right:0;
+      margin-right: 0;
+      -webkit-box-shadow: 0 0 2px 1px ;
+      -moz-box-shadow: 0 0 2px 1px ;
+      box-shadow: 0 0 2px 1px rgba(0, 191, 255, 0.31);
+      i{color:#099;}
+    }
   }
 }
+.main{margin-top: 30px;}
+.left{
+  width:30%;
+  float: left;
+  padding:0 15px;
+  /*-webkit-box-shadow: 0 0 15px #e1e1e1;
+  -moz-box-shadow: 0 0 15px #e1e1e1;
+  box-shadow: 0 0 15px 1px #e1e1e1;*/
+  .content{
+    border:1px solid #e3e3e3;
+    height: 200px;
+  }
+}
+.right{
+  width:70%;
+  float: left;
+  padding:0 15px;
+  height: 200px;
+  /*-webkit-box-shadow: 0 0 15px #e1e1e1;
+  -moz-box-shadow: 0 0 15px #e1e1e1;
+  box-shadow: 0 0 15px 1px #e1e1e1;*/
+  .content{
+    border:1px solid #e3e3e3;
+    height:200px;
+  }
+}
+
