--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -1,13 +1,62 @@
-.container{
+*{
+  margin:0;
+  padding:0;
+  border:none;
+  background:none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  outline: none;
+  ::selection{background: #e3e5ff;}
+}
+a{
+  color:inherit;
+  text-decoration: none;
+}
+ul,ol{ list-style: none;}
+html{
+  width:100%;
+  height:100%;
+  font-size: 16px;
+  color:#333;
+}
+body{
   width:100%;
   min-width: 720px;
+  margin:0;
+  background: #f5f5f5;
+  font-family: "PingFang SC", "Helvetica neue", Helvetica, Tahoma, "lantinghei sc", "Microsoft Yahei", sans-serif;
+  -webkit-font-smoothing: antialiased;;
+  &::-webkit-scrollbar{
+    width:5px;height:5px;
+    border-radius: 2px;
+  }
+  &::-webkit-scrollbar-thumb{
+    background: #b2b2b2;
+    border-radius: 5px;
+  }
+  &::-webkit-scrollbar-track{
+    background: #d4d4d4;
+    border-radius: 3px;
+  }
+}
+.container{
+  width:720px;
   margin:0 auto;
   //border:1px solid red;
 }
 .row{
   width:100%;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.clear{
+  &::after{
+    display: block;
+    width:0;height:0;
+    content: '';
+    clear: both;
+  }
 }
 @media (min-width: 768px) {
   .container{width:720px;}
