--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -90,33 +90,36 @@
   box-shadow: 0 0 2px 1px rgba(0, 191, 255, 0.31);
 }
 .nav-bar .search.active i {
-  color: #099;
+  display: none;
 }
 .main {
   margin-top: 30px;
 }
-.left {
-  width: 30%;
-  float: left;
-  padding: 0 15px;
-  /*-webkit-box-shadow: 0 0 15px #e1e1e1;
-  -moz-box-shadow: 0 0 15px #e1e1e1;
-  box-shadow: 0 0 15px 1px #e1e1e1;*/
+.con-left,
+.con-right {
+  padding-top: 1px;
 }
-.left .content {
+.con-item {
+  background: white;
   border: 1px solid #e3e3e3;
-  height: 200px;
+  margin-bottom: 30px;
 }
-.right {
-  width: 70%;
-  float: left;
+.con-item .title {
+  height: 34px;
+  font-size: 16px;
+  line-height: 34px;
+  font-weight: normal;
   padding: 0 15px;
-  height: 200px;
-  /*-webkit-box-shadow: 0 0 15px #e1e1e1;
-  -moz-box-shadow: 0 0 15px #e1e1e1;
-  box-shadow: 0 0 15px 1px #e1e1e1;*/
+  border-bottom: 1px solid #e3e3e3;
 }
-.right .content {
-  border: 1px solid #e3e3e3;
-  height: 200px;
+.con-item .title i {
+  color: #099;
+}
+.con-item .title span {
+  font-size: 14px;
+  font-style: italic;
+  color: #999;
+}
+.con-item .content {
+  padding: 15px;
 }
