--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -82,34 +82,31 @@
       -webkit-box-shadow: 0 0 2px 1px ;
       -moz-box-shadow: 0 0 2px 1px ;
       box-shadow: 0 0 2px 1px rgba(0, 191, 255, 0.31);
-      i{color:#099;}
+      i{display: none}
     }
   }
 }
 .main{margin-top: 30px;}
-.left{
-  width:30%;
-  float: left;
-  padding:0 15px;
-  /*-webkit-box-shadow: 0 0 15px #e1e1e1;
-  -moz-box-shadow: 0 0 15px #e1e1e1;
-  box-shadow: 0 0 15px 1px #e1e1e1;*/
+.con-left,.con-right{padding-top: 1px;}
+.con-item{
+  background: white;
+  border:1px solid #e3e3e3;
+  margin-bottom: 30px;
+  .title{
+    height:34px;
+    font-size:16px;
+    line-height: 34px;
+    font-weight: normal;
+    padding:0 15px;
+    border-bottom: 1px solid #e3e3e3;
+    i{color: #099;}
+    span{
+      font-size: 14px;
+      font-style: italic;
+      color:#999;
+    }
+  }
   .content{
-    border:1px solid #e3e3e3;
-    height: 200px;
+    padding:15px;
   }
 }
-.right{
-  width:70%;
-  float: left;
-  padding:0 15px;
-  height: 200px;
-  /*-webkit-box-shadow: 0 0 15px #e1e1e1;
-  -moz-box-shadow: 0 0 15px #e1e1e1;
-  box-shadow: 0 0 15px 1px #e1e1e1;*/
-  .content{
-    border:1px solid #e3e3e3;
-    height:200px;
-  }
-}
-
