--- a/src/assets/css/public.css
+++ b/src/assets/css/public.css
@@ -62,6 +62,16 @@ body::-webkit-scrollbar-track {
   content: '';
   clear: both;
 }
+.left {
+  width: 100%;
+  float: left;
+  padding: 0 15px;
+}
+.right {
+  width: 100%;
+  float: left;
+  padding: 0 15px;
+}
 @media (min-width: 768px) {
   .container {
     width: 720px;
@@ -71,11 +81,17 @@ body::-webkit-scrollbar-track {
   }
 }
 @media (min-width: 992px) {
-  .container {
-    width: 940px;
-  }
   html {
     font-size: 16px;
+  }
+  .container {
+    width: 960px;
+  }
+  .left {
+    width: 30%;
+  }
+  .right {
+    width: 70%;
   }
 }
 @media (min-width: 1200px) {
