--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -1,6 +1,7 @@
 @navActive: #00cccc;
+#notes{ width:100% }
+.header,.main,.footer{ width:100% }
 .header{
-  width:100%;
   background: #ffffff;
   -webkit-box-shadow: 1px 0 15px 1px #d6d6d6;
   -moz-box-shadow: 1px 0 15px 1px #d6d6d6;
