--- a/src/assets/css/notes.css
+++ b/src/assets/css/notes.css
@@ -35,10 +35,25 @@
   height: 100%;
   line-height: 40px;
 }
+.nav-bar .nav > * {
+  float: left;
+}
+.nav-bar .box {
+  position: relative;
+}
+.nav-bar .dropDown {
+  display: none;
+  position: absolute;
+  z-index: 2001;
+  background: white;
+}
+.nav-bar .box:hover .dropDown {
+  display: block;
+}
 .nav-bar .nav-item {
-  display: inline-block;
-  padding: 0 8px;
-  margin: 0 12px;
+  display: block;
+  padding: 0 5px;
+  margin: 0 5px;
   height: 30px;
   line-height: 30px;
   color: #099;
@@ -128,5 +143,26 @@
   color: #999;
 }
 .con-item .content {
-  padding: 15px;
+  padding: 10px 15px;
+}
+.con-item .rec {
+  line-height: 24px;
+  font-size: 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.con-item .rec:hover {
+  color: #009999;
+}
+.tags .content a {
+  display: inline-block;
+  font-size: 14px;
+  padding: 0 3px;
+  color: #888;
+}
+.tags .content a:hover {
+  background: #099;
+  color: white;
+  border-radius: 2px;
 }
