--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -64,7 +64,7 @@ body{
 .right{
   width:100%;
   float: left;
-  padding:0 15px;
+  padding:0 30px;
 }
 @media (min-width: 768px) {
   .container{width:720px;}
@@ -74,7 +74,10 @@ body{
   html{font-size: 16px;}
   .container{width:960px;}
   .left{width:30%;}
-  .right{width:70%;}
+  .right{
+    width:70%;
+    padding:0 15px;
+  }
 }
 @media (min-width: 1200px) {
   .container{width:1190px;}
