--- a/src/assets/css/public.css
+++ b/src/assets/css/public.css
@@ -1,23 +1,48 @@
-* {
+h3,
+h4,
+h5,
+p,
+ul {
   margin: 0;
-  padding: 0;
-  border: none;
-  background: none;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  outline: none;
 }
-* ::selection {
-  background: #e3e5ff;
+input,
+button {
+  padding: 0;
+  border: none;
+  background: none;
+  outline: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 a {
+  outline: none;
   color: inherit;
   text-decoration: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
-ul,
-ol {
+ul {
+  padding: 0;
   list-style: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+div {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+br {
+  height: 0;
+}
+::selection {
+  background: #e3e5ff;
 }
 html {
   width: 100%;
