--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -1,19 +1,40 @@
-*{
+h3,h4,h5,p,ul{
   margin:0;
-  padding:0;
-  border:none;
-  background:none;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+input,button{
+  padding: 0;
+  border:none;
+  background: none;
   outline: none;
-  ::selection{background: #e3e5ff;}
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 a{
+  outline: none;
   color:inherit;
   text-decoration: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
-ul,ol{ list-style: none;}
+ul{
+  padding:0;
+  list-style: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+div{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+br{ height:0 }
+::selection{ background: #e3e5ff }
 html{
   width:100%;
   height:100%;
