--- a/src/assets/css/notes.less
+++ b/src/assets/css/notes.less
@@ -54,47 +54,6 @@
     padding-right: 0;
     margin-right: 0;
   }
-  .search{
-    float: right;
-    height:40px;
-    width:130px;
-    margin-right: 15px;
-    position: relative;
-    background: white;
-    /*-webkit-transition: all .4s;
-    -moz-transition: all .4s;
-    -ms-transition: all .4s;
-    -o-transition: all .4s;
-    transition: all .4s;*/
-    input{
-      padding:8px 15px;
-      font-size: 16px;
-      height:100%;
-      width:100%;
-      color: #00dada;
-      &::placeholder{
-        color: #dcdcdc;
-        font-size: 14px;
-      }
-    }
-    i{
-      position: absolute;
-      right:10px;top:10px;
-      font-size: 16px;
-      color:#dcdcdc;
-      font-weight:200;
-    }
-    &.active{
-      position: absolute;
-      width:50%;
-      right:0;
-      margin-right: 0;
-      -webkit-box-shadow: 0 0 2px 1px ;
-      -moz-box-shadow: 0 0 2px 1px ;
-      box-shadow: 0 0 2px 1px rgba(0, 191, 255, 0.31);
-      i{display: none}
-    }
-  }
 }
 .main{margin-top: 30px;}
 .con-left,.con-right{padding-top: 1px;}
@@ -135,5 +94,27 @@
     background: #099;
     color:white;
     border-radius: 2px;
+  }
+}
+.noResult{
+  text-align: center;
+  color:#666;
+  min-height: 600px;
+  .box{
+    position: relative;
+    top:-50%;
+    padding:30px 0;
+    -webkit-transform: translateY(50%);
+    -moz-transform: translateY(50%);
+    -ms-transform: translateY(50%);
+    -o-transform: translateY(50%);
+    transform: translateY(50%);
+  }
+  p{ line-height: 30px }
+  button{
+    margin-top: 15px;
+    color:#444;
+    cursor: pointer;
+    &:hover{ color:#099 }
   }
 }
