--- a/src/assets/css/public.css
+++ b/src/assets/css/public.css
@@ -87,6 +87,9 @@ body::-webkit-scrollbar-track {
   content: '';
   clear: both;
 }
+.relative {
+  position: relative;
+}
 .left {
   width: 100%;
   float: left;
@@ -102,7 +105,7 @@ body::-webkit-scrollbar-track {
     width: 720px;
   }
   html {
-    font-size: 14px;
+    font-size: 15px;
   }
 }
 @media (min-width: 992px) {
