--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -77,6 +77,7 @@ body{
   content: '';
   clear: both;
 }
+.relative{ position: relative }
 .left{
   width:100%;
   float:left;
@@ -89,7 +90,7 @@ body{
 }
 @media (min-width: 768px) {
   .container{width:720px;}
-  html{font-size: 14px;}
+  html{font-size: 15px;}
 }
 @media (min-width: 992px) {
   html{font-size: 16px;}
