--- a/src/assets/css/notes.css
+++ b/src/assets/css/notes.css
@@ -33,29 +33,27 @@
 .nav-bar .nav {
   float: right;
   height: 100%;
-  line-height: 40px;
 }
-.nav-bar .nav > * {
+.nav-bar .nav-box {
+  position: relative;
   float: left;
 }
-.nav-bar .box {
-  position: relative;
+.nav-bar .nav-box:hover .dropDown {
+  display: block;
 }
 .nav-bar .dropDown {
   display: none;
+  width: auto;
   position: absolute;
   z-index: 2001;
   background: white;
 }
-.nav-bar .box:hover .dropDown {
-  display: block;
-}
 .nav-bar .nav-item {
-  display: block;
   padding: 0 5px;
-  margin: 0 5px;
-  height: 30px;
+  margin: 5px;
+  display: block;
   line-height: 30px;
+  height: 30px;
   color: #099;
   font-weight: bold;
 }
@@ -67,8 +65,6 @@
 }
 .nav-bar .login {
   font-size: 20px;
-  padding-right: 0;
-  margin-right: 0;
 }
 .main {
   margin-top: 30px;
