--- a/src/assets/css/public.css
+++ b/src/assets/css/public.css
@@ -49,14 +49,15 @@ html {
   height: 100%;
   font-size: 16px;
   color: #333;
+  overflow-x: hidden;
 }
 body {
-  width: 100%;
+  width: 100vw;
   min-width: 720px;
+  overflow: auto;
   margin: 0;
   background: #f5f5f5;
   font-family: "PingFang SC", "Helvetica neue", Helvetica, Tahoma, "lantinghei sc", "Microsoft Yahei", sans-serif;
-  -webkit-font-smoothing: antialiased;
 }
 body::-webkit-scrollbar {
   width: 5px;
