--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -33,19 +33,17 @@ div{
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-br{ height:0 }
 ::selection{ background: #e3e5ff }
 html{
   width:100%;
   height:100%;
-  font-size: 16px;
+  font-size: 14px;
   color:#333;
-  overflow-x: hidden;
+  overflow-x: auto;
 }
 body{
   width:100vw;
   min-width: 720px;
-  overflow: auto;
   margin:0;
   background: #f5f5f5;
   font-family: "PingFang SC", "Helvetica neue", Helvetica, Tahoma, "lantinghei sc", "Microsoft Yahei", sans-serif;
@@ -65,12 +63,6 @@ body{
 .container{
   width:720px;
   margin:0 auto;
-  //border:1px solid red;
-}
-.row{
-  width:100%;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 .clear::after{
   display: block;
@@ -82,39 +74,47 @@ body{
 .left{
   width:100%;
   float:left;
-  padding:0 15px;
+  padding:0 0.833rem;
+  display: none;
 }
 .right{
   width:100%;
   float: left;
-  padding:0 30px;
+  padding:0 0.833rem;
+}
+@media (min-width: 720px) {
+  html{
+    overflow-x: hidden;
+  }
 }
 @media (min-width: 768px) {
-  .container{width:720px;}
-  html{font-size: 15px;}
+  .container{
+    width:720px;
+  }
+  html{
+    font-size: 15px;
+  }
 }
 @media (min-width: 992px) {
-  html{font-size: 16px;}
-  .container{width:960px;}
-  .left{width:30%;}
+  html{
+    font-size: 16px;
+  }
+  .container{
+    width:960px;
+  }
+  .left{
+    width:30%;
+    display: block;
+  }
   .right{
     width:70%;
-    padding:0 15px;
   }
 }
 @media (min-width: 1200px) {
-  .container{width:1190px;}
-  html{font-size: 18px;}
-}
-@font-face {
-  font-family:'CormorantSC';
-  /*src: url("../fonts/CormorantSC-Regular.eot") format('embedded-opentype');
-  src: url("../fonts/CormorantSC-Regular.otf") format('opentype');
-  src: url("../fonts/CormorantSC-Regular.ttf") format('truetype');
-  src: url("../fonts/CormorantSC-Regular.woff") format('woff');*/
-  src: url("../fonts/FrederickatheGreat-Regular.ttf") format('truetype');
-  src: url("../fonts/FrederickatheGreat-Regular.eot") format('embedded-opentype');
-  src: url("../fonts/FrederickatheGreat-Regular.otf") format('opentype');
-  src: url("../fonts/FrederickatheGreat-Regular.svg") format('svg');
-  src: url("../fonts/FrederickatheGreat-Regular.woff") format('woff');
+  .container{
+    width:1190px;
+  }
+  html{
+    font-size: 18px;
+  }
 }
