2019/02/23 17:51 拆分左侧推荐栏、网站动态、loading注册到全局、跨域设置注册到根组件

--- a/src/assets/css/notes.css
+++ b/src/assets/css/notes.css
@@ -21,6 +21,7 @@
 .nav-bar .logo {
   float: left;
   height: 100%;
+  padding: 3px 0;
 }
 .nav-bar .logo img {
   display: block;
@@ -95,16 +96,6 @@
 }
 .con-item .content {
   padding: 0.556rem 0.833rem;
-}
-.con-item .rec {
-  line-height: 1.333rem;
-  font-size: 0.833rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-.con-item .rec:hover {
-  color: #009999;
 }
 .tags .content a {
   display: inline-block;
