--- a/src/assets/css/notes.less
+++ b/src/assets/css/notes.less
@@ -15,6 +15,7 @@
   .logo{
     float: left;
     height:100%;
+    padding:3px 0;
     img{
       display: block;
       height:100%;
@@ -76,14 +77,6 @@
     }
   }
   .content{ padding:0.556rem 0.833rem  }
-  .rec{
-    line-height: 1.333rem;
-    font-size: 0.833rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    &:hover{ color:#099 }
-  }
 }
 .tags .content a{
   display: inline-block;
