--- a/src/assets/css/public.css
+++ b/src/assets/css/public.css
@@ -33,7 +33,8 @@ ul {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-div {
+div,
+span {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -52,7 +53,13 @@ body {
   width: 100vw;
   min-width: 720px;
   margin: 0;
+  min-height: 100%;
+  padding-bottom: 120px;
   background: #f5f5f5;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  position: relative;
   font-family: "PingFang SC", "Helvetica neue", Helvetica, Tahoma, "lantinghei sc", "Microsoft Yahei", sans-serif;
 }
 body::-webkit-scrollbar {
@@ -71,6 +78,8 @@ body::-webkit-scrollbar-track {
 .container {
   width: 720px;
   margin: 0 auto;
+  display: flex;
+  align-items: stretch;
 }
 .clear::after {
   display: block;
