--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -28,7 +28,7 @@ ul{
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-div{
+div,span{
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -45,7 +45,13 @@ body{
   width:100vw;
   min-width: 720px;
   margin:0;
+  min-height: 100%;
+  padding-bottom: 120px;
   background: #f5f5f5;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  position: relative;
   font-family: "PingFang SC", "Helvetica neue", Helvetica, Tahoma, "lantinghei sc", "Microsoft Yahei", sans-serif;
   &::-webkit-scrollbar{
     width:5px;height:5px;
@@ -63,6 +69,8 @@ body{
 .container{
   width:720px;
   margin:0 auto;
+  display: flex;
+  align-items: stretch;
 }
 .clear::after{
   display: block;
