--- a/src/assets/css/welcome.css
+++ b/src/assets/css/welcome.css
@@ -2,7 +2,8 @@
 .about-me,
 .about-site,
 .tips {
-  font-family: "CormorantSC", "PingFang SC", "Helvetica neue", Helvetica, Tahoma, "lantinghei sc", "Microsoft Yahei", sans-serif;
+  font-family: "CormorantSC", "PingFang SC", "Helvetica neue", Helvetica, Tahoma,
+    "lantinghei sc", "Microsoft Yahei", sans-serif;
   text-align: center;
   background: transparent;
   padding-top: 12%;
