--- a/src/assets/css/welcome.less
+++ b/src/assets/css/welcome.less
@@ -1,56 +1,57 @@
-.greet,.about-me,
+.greet,
+.about-me,
 .about-site,
-.tips{
-  font-family:"CormorantSC", "PingFang SC", "Helvetica neue",
-    Helvetica, Tahoma, "lantinghei sc", "Microsoft Yahei", sans-serif;
+.tips {
+  font-family: "CormorantSC", "PingFang SC", "Helvetica neue", Helvetica, Tahoma,
+    "lantinghei sc", "Microsoft Yahei", sans-serif;
   text-align: center;
   background: transparent;
   padding-top: 12%;
   padding-bottom: 12%;
 }
-.me-logo{
+.me-logo {
   max-width: 180px;
   display: block;
-  margin:0 auto;
+  margin: 0 auto;
 }
-.title{
-  h2{
+.title {
+  h2 {
     font-size: 50px;
     color: #777777;
     margin-bottom: 30px;
     letter-spacing: 15px;
   }
-  h4{
+  h4 {
     font-size: 24px;
     color: #858585;
     margin-bottom: 20px;
     letter-spacing: 8px;
   }
 }
-.entry{
+.entry {
   display: inline-block;
   margin-top: 20px;
-  font-size:1rem;
-  color:#148a5f;
-  letter-spacing:1px;
+  font-size: 1rem;
+  color: #148a5f;
+  letter-spacing: 1px;
 }
-.motto{
+.motto {
   font-size: 24px;
   font-style: italic;
   margin-top: 25px;
-  letter-spacing:2px;
+  letter-spacing: 2px;
   color: #361300;
 }
-.down{
+.down {
   background: transparent;
   text-align: center;
   font-size: 40px;
-  height:40px;
+  height: 40px;
   line-height: 40px;
   color: #735d00;
 }
-.about-site{
-  h2{
+.about-site {
+  h2 {
     letter-spacing: 10px;
   }
 }
