--- a/src/assets/css/public.css
+++ b/src/assets/css/public.css
@@ -60,7 +60,8 @@ body {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   position: relative;
-  font-family: "PingFang SC", "Helvetica neue", Helvetica, Tahoma, "lantinghei sc", "Microsoft Yahei", sans-serif;
+  font-family: "PingFang SC", "Helvetica neue", Helvetica, Tahoma,
+    "lantinghei sc", "Microsoft Yahei", sans-serif;
 }
 body::-webkit-scrollbar {
   width: 5px;
@@ -85,7 +86,7 @@ body::-webkit-scrollbar-track {
   display: block;
   width: 0;
   height: 0;
-  content: '';
+  content: "";
   clear: both;
 }
 .relative {
