--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -1,50 +1,58 @@
-h3,h4,h5,p,ul{
-  margin:0;
+h3,
+h4,
+h5,
+p,
+ul {
+  margin: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-input,button{
+input,
+button {
   padding: 0;
-  border:none;
+  border: none;
   background: none;
   outline: none;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-a{
+a {
   outline: none;
-  color:inherit;
+  color: inherit;
   text-decoration: none;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-ul{
-  padding:0;
+ul {
+  padding: 0;
   list-style: none;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-div,span{
+div,
+span {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-::selection{ background: #e3e5ff }
-html{
-  width:100%;
-  height:100%;
+::selection {
+  background: #e3e5ff;
+}
+html {
+  width: 100%;
+  height: 100%;
   font-size: 14px;
-  color:#333;
+  color: #333;
   overflow-x: auto;
 }
-body{
-  width:100vw;
+body {
+  width: 100vw;
   min-width: 720px;
-  margin:0;
+  margin: 0;
   min-height: 100%;
   padding-bottom: 120px;
   background: #f5f5f5;
@@ -52,77 +60,82 @@ body{
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   position: relative;
-  font-family: "PingFang SC", "Helvetica neue", Helvetica, Tahoma, "lantinghei sc", "Microsoft Yahei", sans-serif;
-  &::-webkit-scrollbar{
-    width:5px;height:5px;
+  font-family: "PingFang SC", "Helvetica neue", Helvetica, Tahoma,
+    "lantinghei sc", "Microsoft Yahei", sans-serif;
+  &::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
     border-radius: 2px;
   }
-  &::-webkit-scrollbar-thumb{
+  &::-webkit-scrollbar-thumb {
     background: #b2b2b2;
     border-radius: 5px;
   }
-  &::-webkit-scrollbar-track{
+  &::-webkit-scrollbar-track {
     background: #d4d4d4;
     border-radius: 3px;
   }
 }
-.container{
-  width:720px;
-  margin:0 auto;
+.container {
+  width: 720px;
+  margin: 0 auto;
   display: flex;
   align-items: stretch;
 }
-.clear::after{
+.clear::after {
   display: block;
-  width:0;height:0;
-  content: '';
+  width: 0;
+  height: 0;
+  content: "";
   clear: both;
 }
-.relative{ position: relative }
-.left{
-  width:100%;
-  float:left;
-  padding:0 0.833rem;
+.relative {
+  position: relative;
+}
+.left {
+  width: 100%;
+  float: left;
+  padding: 0 0.833rem;
   display: none;
 }
-.right{
-  width:100%;
+.right {
+  width: 100%;
   float: left;
-  padding:0 0.833rem;
+  padding: 0 0.833rem;
 }
 @media (min-width: 720px) {
-  html{
+  html {
     overflow-x: hidden;
   }
 }
 @media (min-width: 768px) {
-  .container{
-    width:720px;
+  .container {
+    width: 720px;
   }
-  html{
+  html {
     font-size: 15px;
   }
 }
 @media (min-width: 992px) {
-  html{
+  html {
     font-size: 16px;
   }
-  .container{
-    width:960px;
+  .container {
+    width: 960px;
   }
-  .left{
-    width:30%;
+  .left {
+    width: 30%;
     display: block;
   }
-  .right{
-    width:70%;
+  .right {
+    width: 70%;
   }
 }
 @media (min-width: 1200px) {
-  .container{
-    width:1190px;
+  .container {
+    width: 1190px;
   }
-  html{
+  html {
     font-size: 18px;
   }
 }
